--- a/style.css
+++ b/style.css
@@ -6,8 +6,7 @@
   --light-grey: hsl(217, 12%, 63%);
   --medium-grey: hsl(216, 12%, 54%);
   --dark-blue: hsl(213, 19%, 18%);
-  --very-dark-blue: hsl(216, 12%, 8%);
-  /* #141519 */
+  --very-dark-blue: #141519;
   --font-s: 15px;
   --main-font: "Overpass", sans-serif;
 }
@@ -21,23 +20,95 @@ body {
   background-color: var(--very-dark-blue);
   font-family: var(--main-font);
   color: var(--white);
+  width: 100%;
+  height: 100vh;
   display: flex;
   align-items: center;
   justify-content: center;
-  align-content: center;
 }
 
 .main {
-  background-color: var(--dark-blue);
-  height: 500px;
-  width: 500px;
+  background: rgb(26, 33, 43);
+  background: linear-gradient(
+    0deg,
+    rgba(26, 33, 43, 1) 1%,
+    rgba(33, 40, 50, 1) 100%
+  );
+  /* height: 360px;*/
+  width: 360px;
   margin-top: 100px;
-  border-radius: 15px;
+  border-radius: 35px;
   padding: 30px;
+}
+
+.star {
+  background-color: var(--dark-blue);
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
+.title {
+  font-size: 26px;
+  margin-bottom: 20px;
+}
+
+.text {
+  font-size: 15px;
+  color: var(--medium-grey);
+  margin-bottom: 20px;
 }
 
 .rates-container {
   display: flex;
   flex-direction: row;
-  justify-content: space-evenly;
+  justify-content: space-between;
+  margin: 10px 0;
+}
+
+.rate-number {
+  background-color: var(--dark-blue);
+  color: var(--medium-grey);
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.rate-number:hover {
+  cursor: pointer;
+  background-color: var(--orange);
+  color: var(--white);
+}
+
+.btn-container {
+  display: flex;
+  justify-content: center;
+}
+
+button {
+  background-color: var(--orange);
+  color: var(--white);
+  font-family: var(--main-font);
+  margin: 30px 20px 10px;
+  padding: 12px 144px;
+  border-radius: 25px;
+  border: none;
+  text-transform: uppercase;
+  font-weight: 600;
+  font-size: 15px;
+  letter-spacing: 1.5px;
+  transition: 0.2s ease-in-out;
+}
+
+button:hover {
+  cursor: pointer;
+  color: var(--orange);
+  background-color: var(--white);
 }
