thank you page done

--- a/style.css
+++ b/style.css
@@ -34,9 +34,9 @@ body {
     rgba(26, 33, 43, 1) 1%,
     rgba(33, 40, 50, 1) 100%
   );
-  /* height: 360px;*/
+  height: 360px;
   width: 360px;
-  margin-top: 100px;
+  /* margin-top: 100px; */
   border-radius: 35px;
   padding: 30px;
 }
@@ -79,6 +79,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  transition: 0.2s ease-in-out;
 }
 
 .rate-number:hover {
@@ -116,4 +117,50 @@ button:hover {
 .selected {
   color: var(--white);
   background-color: var(--light-grey);
+}
+
+.thank-you {
+  background: rgb(26, 33, 43);
+  background: linear-gradient(
+    0deg,
+    rgba(26, 33, 43, 1) 1%,
+    rgba(33, 40, 50, 1) 100%
+  );
+  height: 360px;
+  width: 360px;
+  /* margin-top: 100px; */
+  border-radius: 35px;
+  padding: 30px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
+
+.submit {
+  display: none;
+}
+
+.display {
+  display: flex;
+}
+
+.img-thank-you {
+  margin-bottom: 30px;
+}
+
+.score {
+  background-color: var(--dark-blue);
+  padding: 6px 18px;
+  border-radius: 25px;
+  color: var(--orange);
+  margin-bottom: 30px;
+  font-size: 15px;
+}
+
+.text-ty {
+  font-size: 15px;
+  color: var(--medium-grey);
+  margin-bottom: 20px;
+  text-align: center;
 }
