--- a/style.css
+++ b/style.css
@@ -34,8 +34,8 @@ body {
     rgba(26, 33, 43, 1) 1%,
     rgba(33, 40, 50, 1) 100%
   );
-  height: 360px;
-  width: 360px;
+  height: 340px;
+  width: 340px;
   /* margin-top: 100px; */
   border-radius: 35px;
   padding: 30px;
@@ -60,7 +60,7 @@ body {
 .text {
   font-size: 15px;
   color: var(--medium-grey);
-  margin-bottom: 20px;
+  margin-bottom: 25px;
 }
 
 .rates-container {
@@ -97,7 +97,7 @@ button {
   background-color: var(--orange);
   color: var(--white);
   font-family: var(--main-font);
-  margin: 30px 20px 10px;
+  margin: 20px 20px 10px;
   padding: 12px 144px;
   border-radius: 25px;
   border: none;
@@ -126,8 +126,8 @@ button:hover {
     rgba(26, 33, 43, 1) 1%,
     rgba(33, 40, 50, 1) 100%
   );
-  height: 360px;
-  width: 360px;
+  height: 340px;
+  width: 340px;
   /* margin-top: 100px; */
   border-radius: 35px;
   padding: 30px;
@@ -137,7 +137,7 @@ button:hover {
   align-items: center;
 }
 
-.submit {
+.hide {
   display: none;
 }
 
